--- a/Framework/Web/Example/E01/Example/Classes/Example_03/E01Example_03.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_03/E01Example_03.html
@@ -22,11 +22,11 @@
 			- 기타 연산자 (형 변환 연산자, 조건 연산자 등등...)
 
 			prompt 함수란?
-			- 사용자로부터 문자열 데이터를 입력 받는 역할을 수행한다. (즉, 해당 함수를 활용하면 프로그램이 실행 중 필요한 데이터를 입력 받는 
-			것이 가능하다.)
+			- 사용자로부터 문자열 데이터를 입력 받는 역할을 수행한다. (즉, 해당 함수를 활용하면 프로그램이 실행 중 필요한 데이터를 
+			입력 받는 것이 가능하다.)
 
-			해당 함수를 통해서 입력 받을 수 있는 데이터는 문자열이기 때문에 정수와 같은 숫자 데이터를 입력 받기 위해서는 입력 받은 문자열을 
-			형 변환 연산자 등을 이용해서 숫자 데이터로 변환해 줄 필요가 있다. (Ex. Number 함수 사용 등등...)
+			해당 함수를 통해서 입력 받을 수 있는 데이터는 문자열이기 때문에 정수와 같은 숫자 데이터를 입력 받기 위해서는 입력 받은 
+			문자열을 형 변환 연산자 등을 이용해서 숫자 데이터로 변환해 줄 필요가 있다. (Ex. Number 함수 사용 등등...)
 			*/
 			let oTokens = prompt("정수 (2 개) 입력").split(" ");
 
@@ -64,9 +64,9 @@
 			증감 연산자는 연산자의 위치에 따라 전위 증감 연산자와 후위 증감 연산자로 구분된다.
 
 			전위 증감 연산자 vs 후위 증감 연산자
-			- 전위 증감 연산자는 선 증감 후 연산 순서를 지니고 있으며 후위 증감 연산자는 선 연산 후 증감 순서를 지니고 있다. (즉, 전위 증감 
-			연산자는 연산을 진행하기 전에 데이터를 먼저 증감 시키지만 후위 증감 연산자는 먼저 연산을 진행 후 데이터를 증감 시킨다는 차이점이
-			존재한다.)
+			- 전위 증감 연산자는 선 증감 후 연산 순서를 지니고 있으며 후위 증감 연산자는 선 연산 후 증감 순서를 지니고 있다. (즉, 
+			전위 증감 연산자는 연산을 진행하기 전에 데이터를 먼저 증감 시키지만 후위 증감 연산자는 먼저 연산을 진행 후 데이터를 증감 
+			시킨다는 차이점이 존재한다.)
 			*/
 			document.write("<br><p>=====> 증감 연산자 <=====</p>");
 			document.write(`++${nVal01}, --${nVal02} = ${++nVal01}, ${--nVal02}<br>`);
