--- a/Framework/Web/Example/E01/Example/Classes/Example_04/E01Example_04.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_04/E01Example_04.html
@@ -10,8 +10,8 @@
 		<script>
 			/*
 			조건문이란?
-			- 주어진 조건에 따라 프로그램의 흐름을 분산 시키는 기능을 의미한다. (즉, 조건문을 활용하면 특정 조건에 따라 다양한 결과를 출력하는
-			프로그램을 제작하는 것이 가능하다.)
+			- 주어진 조건에 따라 프로그램의 흐름을 분산 시키는 기능을 의미한다. (즉, 조건문을 활용하면 특정 조건에 따라 다양한 결과를 
+			출력하는 프로그램을 제작하는 것이 가능하다.)
 
 			Java Script 조건문 종류
 			- if ~ else
