--- a/Framework/Web/Example/E01/Example/Classes/Example_17/E01Example_17.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_17/E01Example_17.html
@@ -1,8 +1,8 @@
 <!--
 CSS 는 크게 선택자와 선언부로 이루어져있다.
 
-선택자는 CSS 를 적용 할 대상을 명시하는 영역을 의미하며, 선언부는 적용 할 스타일을 명시하는 영역을 의미한다. (즉, HTML 의 특정 태그가 CSS 의
-선택자에 명시되어있다면 CSS 의 스타일이 적용된다는 것을 알 수 있다.)
+선택자는 CSS 를 적용 할 대상을 명시하는 영역을 의미하며, 선언부는 적용 할 스타일을 명시하는 영역을 의미한다. (즉, HTML 의 특정 태그가 
+CSS 의 선택자에 명시되어있다면 CSS 의 스타일이 적용된다는 것을 알 수 있다.)
 
 CSS 선택자 종류
 - 기본 선택자 (전체, 태그, 아이디, 클래스, 속성)
@@ -21,8 +21,8 @@ CSS 선택자 종류
 	<body>
 		<!--
 		기본 선택자란?
-		- 가장 많이 활용되는 선택자로서 나머지 선택자들은 기본 선택자를 응용해서 사용되는 특징이 존재한다. (즉, 기본 선택자는 다른 선택자의
-		기본이 된다는 것을 알 수 있다.)
+		- 가장 많이 활용되는 선택자로서 나머지 선택자들은 기본 선택자를 응용해서 사용되는 특징이 존재한다. (즉, 기본 선택자는 다른 
+		선택자의 기본이 된다는 것을 알 수 있다.)
 		-->
 		<h1>전체 선택자</h1>
 		
@@ -47,8 +47,8 @@ CSS 선택자 종류
 
 		<style>
 			/*
-			전체 선택자는 기본 스타일을 적용하는 역할을 수행한다. (즉, CSS 의 선언부에 명시되어있지 않은 태그는 전체 선택자의 스타일이 적용
-			된다는 것을 알 수 있다.)
+			전체 선택자는 기본 스타일을 적용하는 역할을 수행한다. (즉, CSS 의 선언부에 명시되어있지 않은 태그는 전체 선택자의 스타일이 
+			적용 된다는 것을 알 수 있다.)
 			*/
 			* {
 				color: red;
