--- a/Framework/Web/Example/E01/Example/Classes/Example_19/E01Example_19.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_19/E01Example_19.html
@@ -9,8 +9,8 @@
 	<body>
 		<!--
 		가상 클래스 선택자란?
-		- 특정 요소의 상태를 이용해서 스타일을 적용 할 수 있는 선택자를 의미한다. (즉, 가상 클래스 선택자를 활용하면 특정 상태에 따라 다양한
-		스타일을 적용하는 것이 가능하다.)
+		- 특정 요소의 상태를 이용해서 스타일을 적용 할 수 있는 선택자를 의미한다. (즉, 가상 클래스 선택자를 활용하면 특정 상태에 따라 
+		다양한 스타일을 적용하는 것이 가능하다.)
 		-->
 		<a href="http://www.google.com">링크 가상 클래스 선택자는 a 태그의 상태를 이용해서 스타일을 적용하는 역할을 수행한다.</a>
 
