--- a/Framework/Web/Example/E01/Example/Classes/Example_20/E01Example_20.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_20/E01Example_20.html
@@ -18,8 +18,8 @@
 		- nth-of-type / nth-last-of-type	<- 부모 요소에서 처음 or 마지막 에서 N 번째 순서에 등장하는 요소에 스타일 적용
 
 		Child 계열 선택자 vs Type 계열 선택자
-		- Child 계열 선택자는 단순히 부모 요소를 기준으로 자식 태그의 순서만을 기준으로 스타일을 적용하는 반면, Type 계열 선택자는 부모 요소를
-		기준으로 지정 된 태그의 등장 순서를 기준으로 스타일을 적용하는 차이점이 존재한다.
+		- Child 계열 선택자는 단순히 부모 요소를 기준으로 자식 태그의 순서만을 기준으로 스타일을 적용하는 반면, Type 계열 선택자는 부모 
+		요소를 기준으로 지정 된 태그의 등장 순서를 기준으로 스타일을 적용하는 차이점이 존재한다.
 		-->
 		<h1>first-child / last-child</h1>
 
