--- a/Framework/Web/Example/E01/Example/Classes/Example_25/E01Example_25.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_25/E01Example_25.html
@@ -27,8 +27,8 @@
 		margin 영역을 설정 할 경우에는 margin 겹침 현상을 주의해야 될 필요가 있다.
 
 		margin 겹침 현상이란?
-		- 인접한 margin 영역 값 중 더 큰 값으로 통일되는 현상을 의미한다. (즉, margin 영역이 서로 인접해 있을 경우 해당 margin 값은 둘 중 
-		더 큰 값으로 적용된다는 것을 알 수 있다.)
+		- 인접한 margin 영역 값 중 더 큰 값으로 통일되는 현상을 의미한다. (즉, margin 영역이 서로 인접해 있을 경우 해당 margin 값은 
+		둘 중 더 큰 값으로 적용된다는 것을 알 수 있다.)
 		-->
 		<p class="Margin01">Margin 영역 - 1</p>
 		<p class="Margin02">Margin 영역 - 2</p>
@@ -52,8 +52,8 @@
 		- padding-left
 		- padding-right
 
-		padding 영역은 내부 여백을 의미하기 때문에 겹침 현상이 발생하지 않는다. (즉, padding 영역은 margin 영역과 달리 서로 인접하게 존재
-		할 경우가 없다는 것을 알 수 있다.)
+		padding 영역은 내부 여백을 의미하기 때문에 겹침 현상이 발생하지 않는다. (즉, padding 영역은 margin 영역과 달리 서로 인접하게 
+		존재 할 경우가 없다는 것을 알 수 있다.)
 		-->
 		<p class="Padding01">Padding 영역 - 1</p>
 		<p class="Padding02">Padding 영역 - 2</p>
@@ -64,8 +64,8 @@
 		- height
 		- box-sizing
 
-		box-sizing 속성은 width, height 속성으로 지정 된 값의 범위를 설정하는 역할을 수행한다. (즉, 일반적으로 width, height 속성은 컨텐츠
-		영역의 크기를 지정하는 역할을 수행하지만 box-sizing 속성을 활용하면 border 영역의 크기를 지정하는 것이 가능하다.)
+		box-sizing 속성은 width, height 속성으로 지정 된 값의 범위를 설정하는 역할을 수행한다. (즉, 일반적으로 width, height 속성은 
+		컨텐츠 영역의 크기를 지정하는 역할을 수행하지만 box-sizing 속성을 활용하면 border 영역의 크기를 지정하는 것이 가능하다.)
 		-->
 		<p class="Content01">Content 영역 - 1</p>
 		<p class="Content02">Content 영역 - 2</p>
