--- a/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
@@ -10,8 +10,8 @@
 		<script>
 			/*
 			반복문이란?
-			- 주어진 조건을 만족 할 동안 명령문의 일부 또는 전체를 반복해서 실행하는 기능을 의미한다. (즉, 반복문을 활용하면 특정 조건을 만족
-			할 동안 지속적으로 실행되는 프로그램을 제작하는 것이 가능하다.)
+			- 주어진 조건을 만족 할 동안 명령문의 일부 또는 전체를 반복해서 실행하는 기능을 의미한다. (즉, 반복문을 활용하면 특정 조건을 
+			만족 할 동안 지속적으로 실행되는 프로그램을 제작하는 것이 가능하다.)
 
 			Java Script 반복문 종류
 			- while
@@ -45,9 +45,9 @@
 					continue 키워드란?
 					- 반복문 내부에서 사용 가능하며 현재 프로그램의 흐름을 생략하고 다음 흐름으로 이동 시키는 역할을 수행한다.
 
-					따라서, while 및 do ~ while 반복문 내부에서 사용 할 경우에는 반드시 반복을 끝내기 위한 명령문이 실행 되었는지 확인 할
-					필요가 있다. (즉, continue 키워드가 실행 되지 전에 반복을 끝내기 위한 명령문이 실행 되지 않았을 경우 의도치 않게 무한
-					루프에 빠진다는 것을 알 수 있다.)
+					따라서, while 및 do ~ while 반복문 내부에서 사용 할 경우에는 반드시 반복을 끝내기 위한 명령문이 실행 되었는지 
+					확인 할 필요가 있다. (즉, continue 키워드가 실행 되지 전에 반복을 끝내기 위한 명령문이 실행 되지 않았을 경우 
+					의도치 않게 무한 루프에 빠진다는 것을 알 수 있다.)
 					*/
 					continue;
 				}
@@ -102,11 +102,11 @@
 			do ~ while 반복문은 일반적인 반복문과 달리 반복 조건을 반복 할 명령문을 모두 실행 후 검사하는 사후 판단 반복문이다.
 
 			사전 판단 반복문 vs 사후 판단 반복문
-			- 사전 판단 반복문은 반복 조건을 검사 후 반복 할 명령문을 실행하기 때문에 처음부터 반복 조건이 거짓이라면 반복 할 명령문이 한번도
-			실행되지 않는다.
+			- 사전 판단 반복문은 반복 조건을 검사 후 반복 할 명령문을 실행하기 때문에 처음부터 반복 조건이 거짓이라면 반복 할 명령문이 
+			한번도 실행되지 않는다.
 
-			반면, 사후 판단 반복문은 반복 할 명령문을 모두 실행 후 검사하기 때문에 처음부터 반복 조건이 거짓이라고 하더라도 반드시 1 번 이상
-			실행된다는 차이점이 존재한다.
+			반면, 사후 판단 반복문은 반복 할 명령문을 모두 실행 후 검사하기 때문에 처음부터 반복 조건이 거짓이라고 하더라도 반드시 
+			1 번 이상 실행된다는 차이점이 존재한다.
 			*/
 			do {
 				document.write("Hello, World!<br>");
