--- a/Framework/Web/Example/E01/Example/Classes/Example_07/E01Example_07.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_07/E01Example_07.html
@@ -10,8 +10,8 @@
 		<script>
 			/*
 			컬렉션이란?
-			- 1 개 이상의 데이터를 관리 및 제어 할 수 있는 기능을 의미한다. (즉, 컬렉션을 활용하면 많은 데이터를 효율적으로 제어 할 수 있다는
-			것을 알 수 있다.)
+			- 1 개 이상의 데이터를 관리 및 제어 할 수 있는 기능을 의미한다. (즉, 컬렉션을 활용하면 많은 데이터를 효율적으로 제어 
+			할 수 있다는 것을 알 수 있다.)
 
 			컬렉션에 의해서 관리되는 데이터는 요소라고 지칭되며 컬렉션은 요소를 관리하고 제어함으로서 프로그램의 목적에 맞게 데이터를
 			제어한다는 것을 알 수 있다.
@@ -24,8 +24,8 @@
 			- 배열은 관리되고 있는 데이터의 순서가 존재하기 때문에 특정 위치에 존재하는 데이터에 접근하기 위해서 [ ] (인덱스 연산자) 와
 			인덱스 번호가 활용된다. 
 			
-			또한, 인덱스 번호는 0 ~ 배열 길이 - 1 의 범위를 지니고 있기 때문에 잘못된 인덱스 번호를 명시했을 경우 프로그램이 오작동 할 수 있기 
-			때문에 주의가 필요하다.
+			또한, 인덱스 번호는 0 ~ 배열 길이 - 1 의 범위를 지니고 있기 때문에 잘못된 인덱스 번호를 명시했을 경우 프로그램이 오작동 
+			할 수 있기 때문에 주의가 필요하다.
 
 			반면, 딕셔너리는 키/벨류 쌍으로 데이터를 관리하기 때문에 특정 데이터를 가져오기 위해서는 [ ] (인덱스 연산자) 와 해당 데이터의
 			키를 명시해줘야한다. (즉, 딕셔너리는 배열과 달리 데이터의 순서가 존재하지 않는다는 것을 알 수 있다.)
@@ -34,14 +34,16 @@
 			let oVals02 = [];
 
 			/*
-			배열은 일반적인 자료형 데이터와 마찬가지로 선언과 동시에 초기화가 가능하다. (즉, 배열은 [ ] 기호를 통해서 생성하는 것이 가능하며 
-			생성 후 초기화 값을 따로 명시하지 않으면 길이가 0 이라는 것을 알 수 있다.)
+			배열은 일반적인 자료형 데이터와 마찬가지로 선언과 동시에 초기화가 가능하다. (즉, 배열은 [ ] 기호를 통해서 생성하는 것이 
+			가능하며 생성 후 초기화 값을 따로 명시하지 않으면 길이가 0 이라는 것을 알 수 있다.)
 			*/
 			let oVals03 = [1, 2, 3, 4, 5];
 
 			for(let i = 0; i < 10; ++i) {
 				/*
-				push 함수는 배열에 값을 추가하는 역할을 수행한다. (즉, 해당 함수를 활용하면 새로운 데이터를 배열에 추가하는 것이 가능하다.)
+				push 함수는 배열에 값을 추가하는 역할을 수행한다. (즉, 해당 함수를 활용하면 새로운 데이터를 배열에 추가하는 것이 
+				가능하다.)
+
 				배열은 관리되는 데이터의 순서가 존재하기 때문에 새로운 데이터는 배열의 가장 끝에 추가된다는 것을 알 수 있다.
 				*/
 				oVals01.push(i + 1);
@@ -55,8 +57,8 @@
 				}
 
 				/*
-				배열에 새로운 배열을 추가함으로서 2 차원 이상의 배열을 표현하는 것이 가능하다. (즉, 배열은 정수와 같은 기본 자료형 데이터
-				이외에도 Java Script 에서 지원하는 모든 자료형의 데이터를 추가 할 수 있다.)
+				배열에 새로운 배열을 추가함으로서 2 차원 이상의 배열을 표현하는 것이 가능하다. (즉, 배열은 정수와 같은 기본 자료형 
+				데이터 이외에도 Java Script 에서 지원하는 모든 자료형의 데이터를 추가 할 수 있다.)
 
 				단, 다양한 데이터를 배열에 추가하는 것이 가능하지만 잘못된 데이터의 사용은 프로그램의 오작동을 유발시키기 때문에 주의가
 				필요하다.
@@ -125,8 +127,8 @@
 			}
 
 			/*
-			delete 키워드를 활용하면 딕셔너리가 관리하고 있는 특정 데이터를 제거하는 것이 가능하다. (즉, 제거하고 싶은 데이터의 키를 명시하면
-			해당 키와 일치하는 데이터가 제거 된다는 것을 알 수 있다.)
+			delete 키워드를 활용하면 딕셔너리가 관리하고 있는 특정 데이터를 제거하는 것이 가능하다. (즉, 제거하고 싶은 데이터의 키를 
+			명시하면 해당 키와 일치하는 데이터가 제거 된다는 것을 알 수 있다.)
 			*/
 			delete oValDict02["Key_1"];
 
