--- a/Framework/Web/Example/E01/Example/Classes/Example_12/E01Example_12.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_12/E01Example_12.html
@@ -10,18 +10,20 @@
 		<!--
 		table 태그는 테이블을 생성하는 역할을 수행한다. (즉, 해당 태그를 활용하면 테이블을 웹 문서에 표현하는 것이 가능하다.)
 
-		테이블은 일반적으로 여러 행과 열과 이루어져있기 때문에 테이블을 올바르게 작성하기 위해서는 tr 태그 등을 이용해서 테이블의 각 행과 열에
-		명시하고 싶은 컨텐츠를 채워넣어야한다.
+		테이블은 일반적으로 여러 행과 열과 이루어져있기 때문에 테이블을 올바르게 작성하기 위해서는 tr 태그 등을 이용해서 테이블의 각 행과 
+		열에 명시하고 싶은 컨텐츠를 채워넣어야한다.
 		-->
 		<table>
 			<!--
-			caption 태그는 테이블의 제목을 명시하는 역할을 수행한다. (즉, 해당 태그를 활용하면 특정 테이블에 제목을 지정하는 것이 가능하다.)
+			caption 태그는 테이블의 제목을 명시하는 역할을 수행한다. (즉, 해당 태그를 활용하면 특정 테이블에 제목을 지정하는 것이 
+			가능하다.)
 			-->
 			<caption>물품 정보</caption>
 
 			<!--
-			thead 태그는 테이블의 헤더 영역을 명시하는 역할을 수행한다. (즉, 해당 태그로 지정 된 행은 테이블의 헤더 영역으로 인식 되기 때문에
-			웹 문서를 인쇄 할 때 테이블이 여러 페이지에 나누어 인쇄 되더라도 헤더 영역이 각 페이지마다 자동으로 반복되는 특징이 존재한다.)
+			thead 태그는 테이블의 헤더 영역을 명시하는 역할을 수행한다. (즉, 해당 태그로 지정 된 행은 테이블의 헤더 영역으로 인식 되기 
+			때문에 웹 문서를 인쇄 할 때 테이블이 여러 페이지에 나누어 인쇄 되더라도 헤더 영역이 각 페이지마다 자동으로 반복되는 특징이 
+			존재한다.)
 			-->
 			<thead>
 				<!--
@@ -41,14 +43,14 @@
 			</thead>
 
 			<!--
-			tfoot 태그는 테이블의 하단 영역을 명시하는 역할을 수행한다. (즉, 해당 태그로 지정 된 행은 헤더 영역과 마찬가지로 여러 페이지로
-			나누어서 안쇄 되더라도 자동으로 반복되는 특징이 존재한다.)
+			tfoot 태그는 테이블의 하단 영역을 명시하는 역할을 수행한다. (즉, 해당 태그로 지정 된 행은 헤더 영역과 마찬가지로 여러 
+			페이지로 나누어서 안쇄 되더라도 자동으로 반복되는 특징이 존재한다.)
 			-->
 			<tfoot>
 				<tr>
 					<!--
-					td (table data) 태그는 테이블의 각 셀을 표현하는 역할을 수행한다. (즉, 해당 태그를 명시함으로서 테이블의 각 셀에 들어갈
-					컨텐츠를 표현하는 것이 가능하다.)
+					td (table data) 태그는 테이블의 각 셀을 표현하는 역할을 수행한다. (즉, 해당 태그를 명시함으로서 테이블의 각 셀에 
+					들어갈 컨텐츠를 표현하는 것이 가능하다.)
 
 					또한, colspan 속성 or rowspan 속성을 활용해서 특정 열 or 행을 하나로 병합하는 것이 가능하다.
 					-->
@@ -114,8 +116,8 @@
 		</table>
 
 		<!--
-		style 태그는 특정 태그 및 속성 등의 스타일을 지정하는 역할을 수행한다. (즉, 해당 태그를 중점으로 웹 문서를 꾸미는 방법을 배우는 것이
-		CSS 의 주된 내용이라는 것을 알 수 있다.)
+		style 태그는 특정 태그 및 속성 등의 스타일을 지정하는 역할을 수행한다. (즉, 해당 태그를 중점으로 웹 문서를 꾸미는 방법을 
+		배우는 것이 CSS 의 주된 내용이라는 것을 알 수 있다.)
 		-->
 		<style>
 			table {
