--- a/Framework/Web/Example/E01/Example/Classes/Example_21/E01Example_21.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_21/E01Example_21.html
@@ -9,8 +9,8 @@
 	<body>
 		<!--
 		가상 요소 선택자란?
-		- 실제로 존재하지 않지만 존재한다고 가정하고 스타일을 적용 할 수 있는 선택자를 의미한다. (즉, 가상 요소 선택자를 활용하면 특정 태그를 
-		대상으로 다양한 스타일을 적용하는 것이 가능하다.)
+		- 실제로 존재하지 않지만 존재한다고 가정하고 스타일을 적용 할 수 있는 선택자를 의미한다. (즉, 가상 요소 선택자를 활용하면 특정 
+		태그를 대상으로 다양한 스타일을 적용하는 것이 가능하다.)
 		-->
 		<p>가상 요소 선택자는 before 와 after 이외에도 여러가지가 존재하지만 해당 선택자를 제외하고는 잘 활용되지 않는다.</p>
 
