--- a/Framework/Web/Example/E01/Example/Classes/Example_28/E01Example_28.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_28/E01Example_28.html
@@ -6,38 +6,54 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Example 28</title>
 	</head>
+	
 	<body>
 		<!--
-		배경이란?
-		- 박스 모델 영역 중 padding 영역과 content 영역에 색상이나 이미지와 같은 스타일을 지정 할 수 있는 개념을 의미한다. (즉, 배경을 
-		활용하면 특정 요소에 색상 등을 채워넣는 것이 가능하다.)
+		그리드 레이아웃이란?
+		- HTML 요소들을 격자 형태로 배치 할 수 있는 레이아웃을 의미한다. (즉, 그리드 레이아웃을 활용하면 2 차원 방식으로 HTML 요소를
+		정렬 할 수 있다는 것을 알 수 있다.)
 
-		배경 관련 주요 속성
-		- background-color
-		- background-image
-		- background-repeat
-		- background-size
+		그리드 레이아웃 관련 주요 속성
+		- grid-column
+		- grid-template-rows
+		- grid-template-columns
 		-->
-		<div class="Box"></div>
-		<div class="ImageBox"></div>
+		<div class="GridContainer">
+			<div class="GridItem">그리드 아이템 - 1</div>
+			<div class="GridItem">그리드 아이템 - 2</div>
+			<div class="GridItem">그리드 아이템 - 3</div>
+			<div class="GridItem">그리드 아이템 - 4</div>
+			<div class="GridItem" id="GridEndItem">그리드 아이템 - 5</div>
+		</div>
 	</body>
 
 	<style>
-		.ColorBox {
-			width: 650px;
+		/*
+		그리드 레이아웃은 2 차원 형태로 HTML 요소를 정렬하기 때문에 각 행과 열에 배치 될 요소의 개수를 설정해야한다. (즉, 개수를 
+		설정하지 않을 경우 1 차원 형태로 정렬된다는 것을 알 수 있다.)
+		*/
+		.GridContainer {
+			width: 750px;
 			height: 300px;
-			margin-bottom: 10px;
+			border: 1px solid black;
+			background-color: #c4c4c4;
+
+			display: grid;
+			grid-template-columns: repeat(2, auto);
+		}
+
+		.GridItem {
+			color: white;
+			border: 1px solid black;
 			background-color: red;
 		}
 
-		.ImageBox {
-			width: 650px;
-			height: 300px;
-			margin-bottom: 10px;
-			background-size: auto;
-			background-repeat: repeat;
-			background-image: url("../../Resources/Example_11/E01Google_11.png");
-			border: 1px solid black;
+		.GridItem:nth-child(2n) {
+			background-color: green;
+		}
+
+		#GridEndItem {
+			grid-column: 1/3;
 		}
 	</style>
 </html>
