--- a/Framework/Web/Example/E01/Training/Classes/Training_01/T01Training_01.html
+++ b/Framework/Web/Example/E01/Training/Classes/Training_01/T01Training_01.html
@@ -11,25 +11,25 @@
 		<header>
 			<div class="Container">
 				<h1>
-					<button type="button">Training 1</button>
+					<a href="#Main"><button type="button">Training 1</button></a>
 				</h1>
 
 				<nav>
 					<ul>
 						<li>
-							<button type="button">About</button>
+							<a href="#About"><button type="button">About</button></a>
 						</li>
 
 						<li>
-							<button type="button">Features</button>
+							<a href="#Features"><button type="button">Features</button></a>
 						</li>
 
 						<li>
-							<button type="button">Portfolio</button>
+							<a href="#Portfolio"><button type="button">Portfolio</button></a>
 						</li>
 
 						<li>
-							<button type="button">Contact</button>
+							<a href="#Contact"><button type="button">Contact</button></a>
 						</li>
 					</ul>
 				</nav>
@@ -88,7 +88,7 @@
 			</div>
 		</section>
 
-		<section id="Fetures" class="Do">
+		<section id="Features" class="Do">
 			<div class="Container">
 				<div class="Title">
 					<h4>Features</h4>
